# subi

./: .gitignore  .gitmodules  README.md
automation/: README.md  ape-config.yaml  bot.py  pyproject.toml  table.py
automation/.db/: block.csv  module_addresses.csv  subscriptions.csv
automation/.silverback-images/: Dockerfile.bot
automation/abi/: SubscriptionManager.json  SubscriptionModule.json
automation/bots/: bot.py  multiple_modules.py  single_module.py
contracts/: foundry.toml  remappings.txt
contracts/deployments/: contracts.json
contracts/script/: 00_Deploy_Manager.s.sol  01_Deploy_MasterCopy.s.sol  02_Deploy_Multisend.s.sol  CallModule.s.sol  Deploy_MasterCopy.s.sol  HubSample.s.sol  Utils.sol
contracts/src/: EOAMultisend.sol  ISubscriptionModule.sol  SubscriptionManager.sol  SubscriptionModule.sol
contracts/src/libraries/: ByteSlice.sol
contracts/test/: Blob.t.sol  ByteSlice.t.sol  SubscriptionModule.t.sol
test/: ByteSlice.t.sol
ts/: README.md  package.json  sample.env
ts/src/: abi.ts  batchInstall.ts  cliInstall.ts  config.ts  constants.ts  index.ts  installModule.ts  lib.ts  redeem.ts
ts/src/1inch/: adapter.ts  example.ts  index.ts
ui/: README.md  package.json  wagmi.config.ts
ui/src/: generated.ts
ui/src/app/: globals.css  layout.tsx  manifest.json  page.tsx
ui/src/components/: client-only.tsx  dynamic-subscribe-button.tsx  header.tsx  input-form.tsx  providers.tsx  subscribe-button.tsx  theme-toggle.tsx
ui/src/hooks/: use-safe-module.ts  use-subscription.ts
ui/src/lib/: blockscout.ts  buildTx.ts  constants.ts  logger.ts  (+2 more)
(+6 files in other folders)
